resources.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanboard
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: kanboard
    networking.gke.io/v1beta1.FrontendConfig: kanboard
    networking.gke.io/managed-certificates: kanboard
spec:
  defaultBackend:
    service:
      name: kanboard
      port:
        number: 80
---
kind: Service
apiVersion: v1
metadata:
  name: kanboard
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80": "kanboard"}}'
spec:
  type: NodePort
  selector:
    app: kanboard
  ports:
  - name: http
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kanboard
  name: kanboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanboard
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kanboard
    spec:
      containers:
      - name: kanboard
        image: kanboard/kanboard:v1.2.30
        volumeMounts:
        - name: kanboard-data
          mountPath: /var/www/app/data
        - name: kanboard-plugins
          mountPath: /var/www/app/plugins
        - name: kanboard-access-logs
          mountPath: /var/log/nginx
        - name: local-ini
          mountPath: /etc/php7/conf.d/local.ini
          subPath: local.ini
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        resources:
          requests:
            memory: "4Gi"
            cpu: "1"
          limits:
            memory: "4Gi"
            cpu: "1"
      volumes:
      - name: kanboard-data
        persistentVolumeClaim:
          claimName: kanboard-data-pvc
      - name: kanboard-plugins
        persistentVolumeClaim:
          claimName: kanboard-plugins-pvc
      - name: kanboard-access-logs
        persistentVolumeClaim:
          claimName: kanboard-logs-pvc
      - name: local-ini
        configMap:
          name: local-ini-v1
      - name: nginx-conf
        configMap:
          name: nginx-conf-v1
